deployment/nestjs-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-backend
  labels:
    app: nestjs-backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nestjs-backend
  template:
    metadata:
      labels:
        app: nestjs-backend
    spec:
      containers:
        - name: nestjs-backend
          image: registry.digitalocean.com/kephalosk/nestjs-backend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nestjs-backend-service
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: nestjs-backend
  type: ClusterIP
