deployment/personal-finance-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-finance-app
  labels:
    app: personal-finance-app
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: personal-finance-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: personal-finance-app
    spec:
      containers:
        - name: personal-finance-app
          image: registry.digitalocean.com/kephalosk/personal-finance-app:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: personal-finance-app-service
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: personal-finance-app
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-finance-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: philippkraatz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-finance-app-service
                port:
                  number: 80
    - host: www.philippkraatz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-finance-app-service
                port:
                  number: 80
  tls:
    - hosts:
        - philippkraatz.com
        - www.philippkraatz.com
      secretName: personal-finance-app-tls
